# isac-ci

./: .gitignore  ArcPipeline.alt  Jenkinsfile  README.md  TestingPy.py  ci_config.json  pyproject.toml  pytest.ini  run_tests.py  webhook-app-test.txt  webhook-test.txt
ci/scripts/: build.sh  integration.sh  test.sh
src/isac_app/: __init__.py  cli.py  config.py  core.py  matlab_runner.py
tests/: conftest.py  test_smoke.py
tests/integration/: test_cli_integration.py  test_integration_smoke.py
tests/unit/: test_config.py  test_core.py  test_matlab_runner.py  test_testingpy.py
